[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brml"
version = "0.1.0"
description = "Block Reality ML — external training pipeline for physics surrogate, node recommender, and collapse predictor"
requires-python = ">=3.10"
dependencies = [
    # JAX ecosystem (launcher installs individually for cross-platform compat)
    "numpy>=1.26",
    "scipy>=1.12",
    "jax>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.2.0",

    # Utilities
    "tqdm>=4.66",
]

[project.optional-dependencies]
cpu = ["jax>=0.4.20"]
gpu = ["jax[cuda12]>=0.4.30"]
ui = ["gradio>=4.0"]
full = ["jraph>=0.0.6.dev0", "nbtlib>=2.0", "jax2onnx>=0.1.0",
        "tensorboardX>=2.6", "orbax-checkpoint>=0.5"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
brml-train-surrogate  = "brml.train.train_surrogate:main"
brml-train-recommender = "brml.train.train_recommender:main"
brml-train-collapse   = "brml.train.train_collapse:main"
brml-export           = "brml.export.onnx_export:main"
brml-auto-train       = "brml.pipeline.auto_train:main"
brml-ui               = "brml.ui.app:main"

[tool.ruff]
line-length = 100
target-version = "py310"
